Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1527,7 +1527,7 @@
   "pli-tv-kd9:7.20.85": "Well then, let’s lift that procedure.’ ",
   "pli-tv-kd9:7.20.86": "They lift that procedure—",
   "pli-tv-kd9:7.20.87": "illegitimately and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.88": "illegitimately but unanimous. … ",
+  "pli-tv-kd9:7.20.88": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.89": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.90": "in a legitimate-like way and with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.91": "in a legitimate-like way but unanimous. ",
