--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1530,9 +1530,9 @@
   "pli-tv-kd9:7.20.88": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.89": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.90": "in a legitimate-like way and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.91": "in a legitimate-like way but unanimous. ",
+  "pli-tv-kd9:7.20.91": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.92": "The Sangha there starts disputing: ",
-  "pli-tv-kd9:7.20.93": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done unanimously’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
+  "pli-tv-kd9:7.20.93": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.94": "Those monks who say, ",
   "pli-tv-kd9:7.20.95": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
   "pli-tv-kd9:7.20.96": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
