--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1534,10 +1534,11 @@
   "pli-tv-kd9:7.20.92": "The Sangha there starts disputing: ",
   "pli-tv-kd9:7.20.93": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.94": "Those monks who say, ",
-  "pli-tv-kd9:7.20.95": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
+  "pli-tv-kd9:7.20.95": "‘It was a legitimate-like legal procedure done with a unanimous assembly,’ and those who say, ",
   "pli-tv-kd9:7.20.96": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.97": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.98": "The ninth chapter on those from Campā is finished. ",
+  "pli-tv-kd9:7.20.99": "This is the summary: ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
