Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1539,6 +1539,9 @@
   "pli-tv-kd9:7.20.97": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.98": "The ninth chapter on those from Campā is finished. ",
   "pli-tv-kd9:7.20.99": "This is the summary: ",
+  "pli-tv-kd9:7.20.100": "“The Buddha was at Campā, ",
+  "pli-tv-kd9:7.20.101": "The account of the village of Vāsabha; ",
+  "pli-tv-kd9:7.20.102": "Helping the newly arrived, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
