Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1542,6 +1542,7 @@
   "pli-tv-kd9:7.20.100": "“The Buddha was at Campā, ",
   "pli-tv-kd9:7.20.101": "The account of the village of Vāsabha; ",
   "pli-tv-kd9:7.20.102": "Helping the newly arrived, ",
+  "pli-tv-kd9:7.20.103": "He made it desirable. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
