Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1543,6 +1543,10 @@
   "pli-tv-kd9:7.20.101": "The account of the village of Vāsabha; ",
   "pli-tv-kd9:7.20.102": "Helping the newly arrived, ",
   "pli-tv-kd9:7.20.103": "He made it desirable. ",
+  "pli-tv-kd9:7.20.104": "Knowing, ʻThey are knowledgeableʼ, ",
+  "pli-tv-kd9:7.20.105": "He made no effort then; ",
+  "pli-tv-kd9:7.20.106": "Ejected, ʻHe did notʼ, ",
+  "pli-tv-kd9:7.20.107": "He went to the Victor. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
