Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1547,6 +1547,10 @@
   "pli-tv-kd9:7.20.105": "He made no effort then; ",
   "pli-tv-kd9:7.20.106": "Ejected, ʻHe did notʼ, ",
   "pli-tv-kd9:7.20.107": "He went to the Victor. ",
+  "pli-tv-kd9:7.20.108": "Illegitimate legal procedures with incomplete assembly, ",
+  "pli-tv-kd9:7.20.109": "And illegitimate legal procedures with unanimous assembly; ",
+  "pli-tv-kd9:7.20.110": "And legitimate legal procedures with incomplete assembly, ",
+  "pli-tv-kd9:7.20.111": "Legitimate-like with incomplete assembly. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
