Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1555,6 +1555,9 @@
   "pli-tv-kd9:7.20.113": "One person ejects another; ",
   "pli-tv-kd9:7.20.114": "And one ejects two or three, ",
   "pli-tv-kd9:7.20.115": "One ejects a Sangha. ",
+  "pli-tv-kd9:7.20.116": "The same for two and three, ",
+  "pli-tv-kd9:7.20.117": "And a Sangha ejects a Sangha; ",
+  "pli-tv-kd9:7.20.118": "The Excellent Omniscient One having heard, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
