--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1558,6 +1558,11 @@
   "pli-tv-kd9:7.20.116": "The same for two and three, ",
   "pli-tv-kd9:7.20.117": "And a Sangha ejects a Sangha; ",
   "pli-tv-kd9:7.20.118": "The Excellent Omniscient One having heard, ",
+  "pli-tv-kd9:7.20.119": "Prohibited the illegitimate. ",
+  "pli-tv-kd9:7.20.120": "A procedure deficient in motion ",
+  "pli-tv-kd9:7.20.121": "But complete in announcement; ",
+  "pli-tv-kd9:7.20.122": "One deficient in announcement ",
+  "pli-tv-kd9:7.20.123": "But complete in motion; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
