Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1563,6 +1563,9 @@
   "pli-tv-kd9:7.20.121": "But complete in announcement; ",
   "pli-tv-kd9:7.20.122": "One deficient in announcement ",
   "pli-tv-kd9:7.20.123": "But complete in motion; ",
+  "pli-tv-kd9:7.20.124": "And one deficient in both, ",
+  "pli-tv-kd9:7.20.125": "And not according to the Teaching ",
+  "pli-tv-kd9:7.20.126": "The Monastic Law, the Teacher, objected to, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
