Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1566,6 +1566,8 @@
   "pli-tv-kd9:7.20.124": "And one deficient in both, ",
   "pli-tv-kd9:7.20.125": "And not according to the Teaching ",
   "pli-tv-kd9:7.20.126": "The Monastic Law, the Teacher, objected to, ",
+  "pli-tv-kd9:7.20.127": "Are reversible, unfit to stand. ",
+  "pli-tv-kd9:7.20.128": "Illegitimate with incomplete assembly, with unanimous assembly, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
