Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1572,6 +1572,9 @@
   "pli-tv-kd9:7.20.130": "Just legitimate with a unanimous assembly, ",
   "pli-tv-kd9:7.20.131": "Was allowed by the Buddha. ",
   "pli-tv-kd9:7.20.132": "A group of four, a group of five, ",
+  "pli-tv-kd9:7.20.133": "And a group of ten, twenty; ",
+  "pli-tv-kd9:7.20.134": "And a group of more than twenty, ",
+  "pli-tv-kd9:7.20.135": "Thus a five-fold Sangha. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
