Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1575,6 +1575,7 @@
   "pli-tv-kd9:7.20.133": "And a group of ten, twenty; ",
   "pli-tv-kd9:7.20.134": "And a group of more than twenty, ",
   "pli-tv-kd9:7.20.135": "Thus a five-fold Sangha. ",
+  "pli-tv-kd9:7.20.136": "Apart from ordination, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
