Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1576,6 +1576,9 @@
   "pli-tv-kd9:7.20.134": "And a group of more than twenty, ",
   "pli-tv-kd9:7.20.135": "Thus a five-fold Sangha. ",
   "pli-tv-kd9:7.20.136": "Apart from ordination, ",
+  "pli-tv-kd9:7.20.137": "And the procedure of invitation, ",
+  "pli-tv-kd9:7.20.138": "Together with the procedure of rehabilitation, ",
+  "pli-tv-kd9:7.20.139": "Is done by a group of four. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
