--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1579,6 +1579,11 @@
   "pli-tv-kd9:7.20.137": "And the procedure of invitation, ",
   "pli-tv-kd9:7.20.138": "Together with the procedure of rehabilitation, ",
   "pli-tv-kd9:7.20.139": "Is done by a group of four. ",
+  "pli-tv-kd9:7.20.140": "Apart from two procedures, ",
+  "pli-tv-kd9:7.20.141": "Ordination in the Middle Country,  ",
+  "pli-tv-kd9:7.20.142": "Rehabilitation, a group of five. ",
+  "pli-tv-kd9:7.20.143": "Doers of all procedures, ",
+  "pli-tv-kd9:7.20.144": "Apart from rehabilitation, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
