Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1587,6 +1587,9 @@
   "pli-tv-kd9:7.20.145": "Is a group of ten monks. ",
   "pli-tv-kd9:7.20.146": "A sangha that does all procedures, ",
   "pli-tv-kd9:7.20.147": "Twenty is a doer of all. ",
+  "pli-tv-kd9:7.20.148": "A nun, and a trainee nun, ",
+  "pli-tv-kd9:7.20.149": "A novice monk, a novice nun; ",
+  "pli-tv-kd9:7.20.150": "Who has renounced, the worst kind of offense, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
