--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1598,6 +1598,9 @@
   "pli-tv-kd9:7.20.156": "A perfected one, a rapist of a nun, ",
   "pli-tv-kd9:7.20.157": "A schismatic, a shedder of blood; ",
   "pli-tv-kd9:7.20.158": "A hermaphrodite, a different sect, ",
+  "pli-tv-kd9:7.20.159": "Outside the monastic zone, supernormal power, ",
+  "pli-tv-kd9:7.20.160": "The one who is subject to the legal procedure, ",
+  "pli-tv-kd9:7.20.161": "These twenty-four are ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
