Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1602,6 +1602,9 @@
   "pli-tv-kd9:7.20.160": "The one who is subject to the legal procedure, ",
   "pli-tv-kd9:7.20.161": "These twenty-four are ",
   "pli-tv-kd9:7.20.162": "Prohibited by the Fully Awakened One, ",
+  "pli-tv-kd9:7.20.163": "For these do not complete the quorum. ",
+  "pli-tv-kd9:7.20.164": "If, with one on probation as the fourth, ",
+  "pli-tv-kd9:7.20.165": "It should give probation; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
