Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1605,6 +1605,10 @@
   "pli-tv-kd9:7.20.163": "For these do not complete the quorum. ",
   "pli-tv-kd9:7.20.164": "If, with one on probation as the fourth, ",
   "pli-tv-kd9:7.20.165": "It should give probation; ",
+  "pli-tv-kd9:7.20.166": "Or send to the beginning, give trial, rehabilitate, ",
+  "pli-tv-kd9:7.20.167": "It's invalid, not to be done. ",
+  "pli-tv-kd9:7.20.168": "One deserving sending back, deserving trial, on trial, ",
+  "pli-tv-kd9:7.20.169": "And even deserving rehabilitation, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
