Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1609,6 +1609,9 @@
   "pli-tv-kd9:7.20.167": "It's invalid, not to be done. ",
   "pli-tv-kd9:7.20.168": "One deserving sending back, deserving trial, on trial, ",
   "pli-tv-kd9:7.20.169": "And even deserving rehabilitation, ",
+  "pli-tv-kd9:7.20.170": "These five cannot do a procedure, ",
+  "pli-tv-kd9:7.20.171": "Explained the Fully Awakened One. ",
+  "pli-tv-kd9:7.20.172": "A nun, and a trainee nun, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
