Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1612,6 +1612,8 @@
   "pli-tv-kd9:7.20.170": "These five cannot do a procedure, ",
   "pli-tv-kd9:7.20.171": "Explained the Fully Awakened One. ",
   "pli-tv-kd9:7.20.172": "A nun, and a trainee nun, ",
+  "pli-tv-kd9:7.20.173": "A novice monk, a novice nun; ",
+  "pli-tv-kd9:7.20.174": "Who has renounced, the worst kind, insane, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
