--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1618,6 +1618,7 @@
   "pli-tv-kd9:7.20.176": "Not making amends, a bad view, ",
   "pli-tv-kd9:7.20.177": "And also a _paṇḍaka_, hermaphrodite; ",
   "pli-tv-kd9:7.20.178": "One from a different Buddhist sect, monastery zone, ",
+  "pli-tv-kd9:7.20.179": "Air, and the subject of the procedure. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
