Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1619,6 +1619,8 @@
   "pli-tv-kd9:7.20.177": "And also a _paṇḍaka_, hermaphrodite; ",
   "pli-tv-kd9:7.20.178": "One from a different Buddhist sect, monastery zone, ",
   "pli-tv-kd9:7.20.179": "Air, and the subject of the procedure. ",
+  "pli-tv-kd9:7.20.180": "Of these eighteen",
+  "pli-tv-kd9:7.20.181": "An objection is invalid; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
