--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1621,6 +1621,8 @@
   "pli-tv-kd9:7.20.179": "Air, and the subject of the procedure. ",
   "pli-tv-kd9:7.20.180": "Of these eighteen",
   "pli-tv-kd9:7.20.181": "An objection is invalid; ",
+  "pli-tv-kd9:7.20.182": "Of a regular monk, ",
+  "pli-tv-kd9:7.20.183": "An objection is valid. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
