Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1623,6 +1623,9 @@
   "pli-tv-kd9:7.20.181": "An objection is invalid; ",
   "pli-tv-kd9:7.20.182": "Of a regular monk, ",
   "pli-tv-kd9:7.20.183": "An objection is valid. ",
+  "pli-tv-kd9:7.20.184": "For one who is pure, the sending away fails, ",
+  "pli-tv-kd9:7.20.185": "For the fool it succeeds; ",
+  "pli-tv-kd9:7.20.186": "The _paṇḍaka_, living together by theft, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
