--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1626,6 +1626,10 @@
   "pli-tv-kd9:7.20.184": "For one who is pure, the sending away fails, ",
   "pli-tv-kd9:7.20.185": "For the fool it succeeds; ",
   "pli-tv-kd9:7.20.186": "The _paṇḍaka_, living together by theft, ",
+  "pli-tv-kd9:7.20.187": "Joined, animal, ",
+  "pli-tv-kd9:7.20.188": "Of mother, of father, a perfected One, ",
+  "pli-tv-kd9:7.20.189": "A rapist, a schismatic; ",
+  "pli-tv-kd9:7.20.190": "And a shedder of blood, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
