Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1630,6 +1630,9 @@
   "pli-tv-kd9:7.20.188": "Of mother, of father, a perfected One, ",
   "pli-tv-kd9:7.20.189": "A rapist, a schismatic; ",
   "pli-tv-kd9:7.20.190": "And a shedder of blood, ",
+  "pli-tv-kd9:7.20.191": "And one who is a hermaphrodite. ",
+  "pli-tv-kd9:7.20.192": "Of these eleven, ",
+  "pli-tv-kd9:7.20.193": "The admittance fails; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
