Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1636,6 +1636,8 @@
   "pli-tv-kd9:7.20.194": "Hand, foot, both of them, ",
   "pli-tv-kd9:7.20.195": "Ear, nose, both of them. ",
   "pli-tv-kd9:7.20.196": "Finger, thumb, tendon, ",
+  "pli-tv-kd9:7.20.197": "Joined, and hunchback, dwarf; ",
+  "pli-tv-kd9:7.20.198": "Goiter, branded, and whipped, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
