--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1641,6 +1641,7 @@
   "pli-tv-kd9:7.20.199": "And sentenced, elephantiasis. ",
   "pli-tv-kd9:7.20.200": "Serious, abnormal, and blind in one eye, ",
   "pli-tv-kd9:7.20.201": "Crooked limb, lame, and also paralyzed; ",
+  "pli-tv-kd9:7.20.202": "Drippled, weak, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
