Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1642,6 +1642,8 @@
   "pli-tv-kd9:7.20.200": "Serious, abnormal, and blind in one eye, ",
   "pli-tv-kd9:7.20.201": "Crooked limb, lame, and also paralyzed; ",
   "pli-tv-kd9:7.20.202": "Drippled, weak, ",
+  "pli-tv-kd9:7.20.203": "Blind, and mute, deaf. ",
+  "pli-tv-kd9:7.20.204": "Blind and mute, blind and deaf, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
