Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1645,6 +1645,8 @@
   "pli-tv-kd9:7.20.203": "Blind, and mute, deaf. ",
   "pli-tv-kd9:7.20.204": "Blind and mute, blind and deaf, ",
   "pli-tv-kd9:7.20.205": "Mute and deaf; ",
+  "pli-tv-kd9:7.20.206": "And blind and mute and deaf, ",
+  "pli-tv-kd9:7.20.207": "Thirty-two exactly. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
