Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1649,6 +1649,7 @@
   "pli-tv-kd9:7.20.207": "Thirty-two exactly. ",
   "pli-tv-kd9:7.20.208": "For them there is admittance, ",
   "pli-tv-kd9:7.20.209": "Explained the Fully Awakened one; ",
+  "pli-tv-kd9:7.20.210": "It is to be seen, to be remedied, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
