Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1650,6 +1650,9 @@
   "pli-tv-kd9:7.20.208": "For them there is admittance, ",
   "pli-tv-kd9:7.20.209": "Explained the Fully Awakened one; ",
   "pli-tv-kd9:7.20.210": "It is to be seen, to be remedied, ",
+  "pli-tv-kd9:7.20.211": "There is no sending away. ",
+  "pli-tv-kd9:7.20.212": "A procedure of ejection against one, ",
+  "pli-tv-kd9:7.20.213": "Seven are illegitimate; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
