Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1656,6 +1656,8 @@
   "pli-tv-kd9:7.20.214": "If committed in conformity, ",
   "pli-tv-kd9:7.20.215": "Those seven too are illegitimate. ",
   "pli-tv-kd9:7.20.216": "If not committed in conformity, ",
+  "pli-tv-kd9:7.20.217": "Seven procedures are legitimate; ",
+  "pli-tv-kd9:7.20.218": "Face-to-face, and questioning, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
