Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1658,6 +1658,9 @@
   "pli-tv-kd9:7.20.216": "If not committed in conformity, ",
   "pli-tv-kd9:7.20.217": "Seven procedures are legitimate; ",
   "pli-tv-kd9:7.20.218": "Face-to-face, and questioning, ",
+  "pli-tv-kd9:7.20.219": "And done with admission. ",
+  "pli-tv-kd9:7.20.220": "Recollection, insanity, penalty, ",
+  "pli-tv-kd9:7.20.221": "Condemnation, and with demotion; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
