Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1661,6 +1661,10 @@
   "pli-tv-kd9:7.20.219": "And done with admission. ",
   "pli-tv-kd9:7.20.220": "Recollection, insanity, penalty, ",
   "pli-tv-kd9:7.20.221": "Condemnation, and with demotion; ",
+  "pli-tv-kd9:7.20.222": "Banishment, reconciliation, ",
+  "pli-tv-kd9:7.20.223": "Ejection, and probation. ",
+  "pli-tv-kd9:7.20.224": "Beginning, trial, rehabilitation, ",
+  "pli-tv-kd9:7.20.225": "Just so ordination; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
