Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1668,6 +1668,9 @@
   "pli-tv-kd9:7.20.226": "If it does one in place of another, ",
   "pli-tv-kd9:7.20.227": "These sixteen are illegitimate. ",
   "pli-tv-kd9:7.20.228": "If it does the right one, ",
+  "pli-tv-kd9:7.20.229": "These sixteen are legitimate; ",
+  "pli-tv-kd9:7.20.230": "It counter-accused reciprocally, ",
+  "pli-tv-kd9:7.20.231": "These sixteen are illegitimate. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
