Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1671,6 +1671,10 @@
   "pli-tv-kd9:7.20.229": "These sixteen are legitimate; ",
   "pli-tv-kd9:7.20.230": "It counter-accused reciprocally, ",
   "pli-tv-kd9:7.20.231": "These sixteen are illegitimate. ",
+  "pli-tv-kd9:7.20.232": "Two and two having that basis, ",
+  "pli-tv-kd9:7.20.233": "Also these sixteen are legitimate; ",
+  "pli-tv-kd9:7.20.234": "The permutation with a one-by-one basis, ",
+  "pli-tv-kd9:7.20.235": "ʻIllegitimateʼ, said the Victor. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
