Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1676,6 +1676,7 @@
   "pli-tv-kd9:7.20.234": "The permutation with a one-by-one basis, ",
   "pli-tv-kd9:7.20.235": "ʻIllegitimateʼ, said the Victor. ",
   "pli-tv-kd9:7.20.236": "It did a legal procedure of condemnation, ",
+  "pli-tv-kd9:7.20.237": "The Sangha, the one who is quarrelsome; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
