Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1678,6 +1678,8 @@
   "pli-tv-kd9:7.20.236": "It did a legal procedure of condemnation, ",
   "pli-tv-kd9:7.20.237": "The Sangha, the one who is quarrelsome; ",
   "pli-tv-kd9:7.20.238": "An illegitimate procedure with incomplete assembly, ",
+  "pli-tv-kd9:7.20.239": "He went to another monastery. ",
+  "pli-tv-kd9:7.20.240": "There unanimous assembly with illegitimate, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
