--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1680,6 +1680,8 @@
   "pli-tv-kd9:7.20.238": "An illegitimate procedure with incomplete assembly, ",
   "pli-tv-kd9:7.20.239": "He went to another monastery. ",
   "pli-tv-kd9:7.20.240": "There unanimous assembly with illegitimate, ",
+  "pli-tv-kd9:7.20.241": "Did condemnation against him; ",
+  "pli-tv-kd9:7.20.242": "Another incomplete assembly with legitimate, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
