Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1682,6 +1682,10 @@
   "pli-tv-kd9:7.20.240": "There unanimous assembly with illegitimate, ",
   "pli-tv-kd9:7.20.241": "Did condemnation against him; ",
   "pli-tv-kd9:7.20.242": "Another incomplete assembly with legitimate, ",
+  "pli-tv-kd9:7.20.243": "Did condemnation against him; ",
+  "pli-tv-kd9:7.20.244": "Also incomplete assembly with legitimate-like, ",
+  "pli-tv-kd9:7.20.245": "So did a unanimous assembly; ",
+  "pli-tv-kd9:7.20.246": "And a unanimous assembly with illegitimate, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
