--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1686,6 +1686,8 @@
   "pli-tv-kd9:7.20.244": "Also incomplete assembly with legitimate-like, ",
   "pli-tv-kd9:7.20.245": "So did a unanimous assembly; ",
   "pli-tv-kd9:7.20.246": "And a unanimous assembly with illegitimate, ",
+  "pli-tv-kd9:7.20.247": "And an incomplete assembly with legitimate, ",
+  "pli-tv-kd9:7.20.248": "And incomplete assembly with legitimate-like, ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
