--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1694,6 +1694,9 @@
   "pli-tv-kd9:7.20.252": "Demotion for the incompetent fool, ",
   "pli-tv-kd9:7.20.253": "The corrupter of families should be banished; ",
   "pli-tv-kd9:7.20.254": "And a procedure of reconciliation ",
+  "pli-tv-kd9:7.20.255": "Should be done to the abuser. ",
+  "pli-tv-kd9:7.20.256": "Not recognizing, not making amends, ",
+  "pli-tv-kd9:7.20.257": "And one who does not give up a view; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
