Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1697,6 +1697,10 @@
   "pli-tv-kd9:7.20.255": "Should be done to the abuser. ",
   "pli-tv-kd9:7.20.256": "Not recognizing, not making amends, ",
   "pli-tv-kd9:7.20.257": "And one who does not give up a view; ",
+  "pli-tv-kd9:7.20.258": "For them is a procedure of ejection, ",
+  "pli-tv-kd9:7.20.259": "Was said by the Caravan Leader. ",
+  "pli-tv-kd9:7.20.260": "Further for the method-procedures, ",
+  "pli-tv-kd9:7.20.261": "The Wise One determines condemnation; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
