--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1701,6 +1701,10 @@
   "pli-tv-kd9:7.20.259": "Was said by the Caravan Leader. ",
   "pli-tv-kd9:7.20.260": "Further for the method-procedures, ",
   "pli-tv-kd9:7.20.261": "The Wise One determines condemnation; ",
+  "pli-tv-kd9:7.20.262": "For those just in forward order, ",
+  "pli-tv-kd9:7.20.263": "He conducts himself properly, he should ask. ",
+  "pli-tv-kd9:7.20.264": "Lifting of those procedures, ",
+  "pli-tv-kd9:7.20.265": "And below with the method for procedures; ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure, ",
   "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
