--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -3,7 +3,7 @@
   "pli-tv-kd10:0.2": "The Long Division ",
   "pli-tv-kd10:0.3": "The chapter about Kosambī ",
   "pli-tv-kd10:0.4": "1. The account of the dispute at Kosambī ",
-  "pli-tv-kd10:1.1.1": "At one time the Buddha was staying at Kosambī in Ghosita’s Monastery. ",
+  "pli-tv-kd10:1.1.1": "At one time when the Buddha was staying at Kosambī in Ghosita’s Monastery,  ",
   "pli-tv-kd10:1.1.2": "At this time a certain monk had committed an offense. ",
   "pli-tv-kd10:1.1.3": "He regarded that offense as an offense, ",
   "pli-tv-kd10:1.1.4": "but there were other monks who did not. ",
