Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -216,7 +216,7 @@
   "ja-name:215.ja193": "Prinz Lotus ",
   "ja-name:216.ja194": "Der Juwelendieb ",
   "ja-name:217.ja195": "Im Schutz eines Berges ",
-  "ja-name:218.ja196": "Das fliegende Pferd ",
+  "ja-name:218.ja196": "Das geflügelte Pferd ",
   "ja-name:219.ja197": "Freunde und Feinde ",
   "ja-name:220.ja198": "Rādha der Papagei ",
   "ja-name:221.ja199": "Der Hausbesitzer ",
