Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn8/sn8.12_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn8/sn8.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn8/sn8.12_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn8.12:0.1": "Verbundene Lehrreden 8.12 ",
   "sn8.12:0.2": "1. Das Kapitel mit Vaṅgīsa ",
-  "sn8.12:0.3": "12. Mit Vaṅgīsa ",
+  "sn8.12:0.3": "Mit Vaṅgīsa ",
   "sn8.12:1.1": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "sn8.12:1.2": "Nun hatte zu dieser Zeit Vaṅgīsa kürzlich die Vollendung erlangt. Während er die Seligkeit der Freiheit erfuhr, sagte er bei dieser Gelegenheit diese Strophen auf: ",
   "sn8.12:2.1": "„Früher sind wir, trunken von Poesie, ",
