--- a/translation/de/sabbamitta/sutta/sn/sn9/sn9.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn9/sn9.1_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn9.1:0.1": "Verbundene Lehrreden 9.1 ",
   "sn9.1:0.2": "1. Das Kapitel über den Wald ",
-  "sn9.1:0.3": "1. Abgeschiedenheit ",
+  "sn9.1:0.3": "Abgeschiedenheit ",
   "sn9.1:1.1": "So habe ich es gehört: ",
   "sn9.1:1.2": "Einmal hielt sich einer der Mönche im Land der Kosaler in einem gewissen Waldstück auf. ",
   "sn9.1:1.3": "Zu dieser Zeit dachte dieser Mönch während seiner Meditation des Tages schlechte, untaugliche Gedanken, die mit dem Laienleben zu tun hatten. ",
